--- a/public/stylesheets/alerts.css
+++ b/public/stylesheets/alerts.css
@@ -1,5 +1,5 @@
 .alert-header {
-    font-family: 'Lato' sans-serif;
+    font-family: "Lato-Regular", sans-serif;
     margin-bottom: 0 !important;
 }
 .alert {
