--- a/public/stylesheets/article-index.css
+++ b/public/stylesheets/article-index.css
@@ -15,7 +15,7 @@
 
        
 .title-text {
-    font-family: 'GothamPro';
+    font-family: 'GothamPro', sans-serif;
     font-size: 65.6106px;
     line-height: 114.9%;
     color: #4B535F;
@@ -38,7 +38,7 @@
 
 
 .article-title-index {
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular",  sans-serif;
 
     font-style: normal;
     font-weight: bold;
@@ -54,7 +54,7 @@
 
 .createdDate {
     font-size: 12px;
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular",  sans-serif;
 
     font-style: normal;
     font-weight: bold;
