--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,6 +1,6 @@
 body {
     background-color: #EEF0F3;
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular", sans-serif;
 }
 
 
@@ -186,7 +186,7 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: 22px;
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular", sans-serif;
 
     display: inline-block;
     margin-bottom:20px;
