--- a/public/stylesheets/index-first-section.css
+++ b/public/stylesheets/index-first-section.css
@@ -65,7 +65,7 @@
 
 
 .title-mobile {
-    font-family: 'GothamPro';
+    font-family: 'GothamPro', sans-serif;
     font-size: 30px;
     line-height: 130%;
     color: #4B535F;
@@ -79,7 +79,7 @@
 .header-title {
     font-size: 65.6106px;
     margin:0;
-    font-family: 'GothamPro';
+    font-family: 'GothamPro', sans-serif;
     font-weight: 500;
     line-height: 114.9%;
     color: #4B535F;
@@ -209,7 +209,7 @@ input[type="search"]::-webkit-search-cancel-button  {
 .uk-active label {
   margin: 0;
   cursor: pointer;
-  font-family: "Lato-Regular";
+  font-family: "Lato-Regular", sans-serif;
   font-size: 18px;
   line-height: 22px;
   margin-bottom:12px;
@@ -237,7 +237,7 @@ input[type="search"]::-webkit-search-cancel-button  {
 
 
 .list-variants li {
-  font-family: 'Lato-Regular';
+  font-family: 'Lato-Regular', sans-serif;
   font-size: 14px;
   line-height: 17px;
   margin-right: 20px;
@@ -430,7 +430,7 @@ input[type="search"]::-webkit-search-cancel-button  {
     .uk-active label {
       margin: 0;
       cursor: pointer;
-      font-family: "Lato-Regular";
+      font-family: "Lato-Regular", sans-serif;
       font-size: 18px;
       line-height: 22px;
       margin-bottom:12px;
@@ -458,7 +458,7 @@ input[type="search"]::-webkit-search-cancel-button  {
     
     
     .list-variants li {
-      font-family: 'Lato-Regular';
+      font-family: 'Lato-Regular', sans-serif;
       font-size: 18px;
       line-height: 22px;
       margin-right: 20px;
@@ -599,7 +599,7 @@ input[type="search"]::-webkit-search-cancel-button  {
     }
     .text-index-title {
         max-width: 400px;
-        font-family: "Lato-Regular";
+        font-family: "Lato-Regular", sans-serif;
         font-size: 14px;
         line-height: 180%;
         /* or 32px */
