--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,6 +1,6 @@
 body {
     background-color: #EEF0F3;
-    font-family: "Lato-Regular" !important;
+    font-family: "Lato-Regular", sans-serif !important;
 }
 
 .uk-section-muted {
