--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -31,7 +31,7 @@ ul {
 }
 
 .item a {
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
