--- a/public/stylesheets/project-show.css
+++ b/public/stylesheets/project-show.css
@@ -70,7 +70,7 @@ a:hover {
 }
 
 .map-distance {
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular",sans-serif;
     font-weight: 600;
     font-size: 20px;
     line-height: 42px;
@@ -102,7 +102,7 @@ a:hover {
 }
 
 .project-title {
-    font-family: 'GothamPro';
+    font-family: 'GothamPro',sans-serif;
     font-size: 30px;
     line-height: 130%;
     color: #4B535F;
@@ -133,7 +133,7 @@ a:hover {
 
 .text-content {
     height: auto;
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular",sans-serif;
     font-size: 14px;
     line-height: 170%;
     /* or 38px */
@@ -161,7 +161,7 @@ a:hover {
 }
 
 .description-title {
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular",sans-serif;
     max-width: 300px;
     width: 50%;
     display: inline-block;
@@ -184,7 +184,7 @@ a:hover {
 }
 
 .details-info {
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular",sans-serif;
     font-weight: 600;
     font-size: 16px;
     line-height: 100%;
@@ -195,7 +195,7 @@ a:hover {
 }
 
 .details-price {
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular",sans-serif;
     
     font-weight:600;
     font-size: 24px;
@@ -224,7 +224,7 @@ a:hover {
     color:white;
     border:none;
     text-transform: uppercase;
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular",sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -282,7 +282,7 @@ a:hover {
   .slide-title {
       
       display: inline-block;
-      font-family: "Lato-Regular";
+      font-family: "Lato-Regular", sans-serif;
       font-style: normal;
       font-weight: 500;
       font-size: 18px;
@@ -339,7 +339,7 @@ a:hover {
   }
 
   .add-favourite {
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular", sans-serif;
     padding: 5px 8px;
     margin:37px 0;
     display: inline-block;
@@ -371,7 +371,7 @@ a:hover {
 
 
 .project-title-index {
-    font-family: "Lato-Regular";
+    font-family: "Lato-Regular", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -386,7 +386,7 @@ a:hover {
 
 
 .project-price-index {
-    font-family: 'GothamPro';
+    font-family: 'GothamPro', sans-serif;
     font-size: 24px;
     line-height: 100%;
     /* identical to box height */
