--- a/public/stylesheets/search-filter.css
+++ b/public/stylesheets/search-filter.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Lato-Regular";
+  font-family: "Lato-Regular",sans-serif;
 }
 
 .input-group {
@@ -158,7 +158,7 @@ input[type=number] {
 .uk-active label {
   margin: 0;
   cursor: pointer;
-  font-family: "Lato-Regular";
+  font-family: "Lato-Regular",sans-serif;
   font-size: 18px;
   line-height: 22px;
   margin-bottom:12px;
@@ -279,7 +279,7 @@ input[type="search"]::-webkit-search-cancel-button  {
 
 
 .list-variants li {
-  font-family: 'Lato-Regular';
+  font-family: 'Lato-Regular',sans-serif;
   font-size: 18px;
   line-height: 22px;
   margin-right: 20px;
