--- a/public/stylesheets/index-first-section.css
+++ b/public/stylesheets/index-first-section.css
@@ -2,16 +2,25 @@
 
 @keyframes example1 {
   25%   { 
-    transform: rotate(6deg) translateY(-70%) translateX(110%); 		
+    transform: rotate(9deg) translateY(-110%) translateX(270%); 		
+  }
+  40%   { 
+    transform: rotate(14deg) translateY(-40%) translateX(110%); 		
   }
   50% {
-    transform: rotate(-1deg) translateY(-80%) translateX(-20%);  
+    transform: rotate(-1deg) translateY(-80%) translateX(-20%) scale(1.05);  
+  }
+  65% {
+    transform: rotate(8deg) translateY(-40%) translateX(-50%) scale(1.18);   
   }
   75% {
-    transform: rotate(8deg) translateY(-40%) translateX(-50%);  
+    transform: rotate(16deg) scale(0.55);   
+  }
+  80% {
+    transform: rotate(28deg)  scale(1);
   }
   100% { 
-    transform: translateX(0%) rotate(-6deg); 
+    transform: translateX(0%) rotate(-6deg);
   }
  }
 
@@ -125,6 +134,7 @@
     border-bottom: 1px solid #9EC1E1;
     background-position: center right;
     text-align: left;
+    cursor: pointer;
   }
 
 
@@ -363,7 +373,7 @@ input[type="search"]::-webkit-search-cancel-button  {
       color: #2F3B43;
       background: url('../images/ellipsis.png') no-repeat;
       background-position:  center right ;
-      
+      cursor: pointer;
     }
     
     
