--- a/views/partials/searchFilter.ejs
+++ b/views/partials/searchFilter.ejs
@@ -73,7 +73,7 @@
 				</ul>
 				
 			</div>
-			<button class="input-text-head second" id="input-price" type="button">
+			<button class="input-text-head second small" id="input-price" type="button">
 				<% if(query.price.min.length === 0){ %>
 					Цена
 				  <% } else { %>  
