--- a/public/stylesheets/search-filter.css
+++ b/public/stylesheets/search-filter.css
@@ -41,6 +41,7 @@ body {
 
 
 .input-text-head {
+  font-family: "Lato-Regular",sans-serif;
   border:none;
   font-style: normal;
   text-align: left;
@@ -385,7 +386,171 @@ input[type="search"]::-webkit-search-cancel-button  {
 
 
 
+@media (max-width: 1480px) {
+  
+  #input-additional-filter {
+    display: none;
+  }
+  
+}
+
+@media  (max-width: 1225px) {
+  
+  .input-text-head {
+    width:200px;
+  }
+
+  .small {
+    width:120px;
+  }
+  
+}
 
 
+@media  (max-width: 1028px) {
+  
+  #input-bedrooms {
+    display: none;
+  }
+  
+}
 
+@media  (max-width: 900px) {
+  
+  #input-area, #input-position {
+    display: none;
+  }
+  .input-group {
+    flex-direction: column;
+    padding:0 12px;
+    max-width:600px;
+    margin:0 auto;
+  }
+
+  .input-text-head {
+    width:100%;
+    margin:8px 0;
+    border-left: none;
+  }
+
+  .input-submit-head {
+    width:100%;
+    max-width:320px;
+    margin:16px 0;
+  }
+  .location-dropdown {
+    width: 342px !important;
+    text-align: left;
+    padding:0 !important;
+    border-radius: 3px;
+    
+  }
+
+  .search-location {
+    width: 266px;
+    background: #FFFFFF;
+    font-size: 14px;
+    line-height: 17px;
+    color: #2F3B43;
+    border: 1px solid RGBA(74,82,94,0.3);
+    box-sizing: border-box;
+    border-radius: 5px;
+    height: 51px;
+    padding: 10px 16px;
+    margin: 20px 32px 6px;
+  }
+
+  .list-variants li {
+    font-family: 'Lato-Regular', sans-serif;
+    font-size: 14px;
+    line-height: 17px;
+    margin-right: 20px;
+    border-bottom: 1px solid RGBA(47,59,67,0.7);
+    color: #2F3B43;
+    opacity: 0.7;
+    margin-top: 15px;
+    cursor: pointer;
+  }
+
+  .price-dropdown, .area-dropdown {
+    width: 355px !important;
+    padding:0 !important;
+  }
+
+  .input-price {
+    width:100px;
+    height: 41px;
+    padding:8px 11px;
+    color: #2F3B43;
+    border: 1px solid RGBA(74,82,94,0.3);
+    border-radius: 5px;
+    font-size: 18px;
+    line-height: 22px;
+    color: #2F3B43;
+  }
+  
+  .wrapper-price-inputs {
+    margin: 26px 37px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .input-price:focus, .input-area:focus {
+    outline: none !important;
+    border: 2px solid RGBA(74,82,94,0.3);
+  }
+  
+  .input-price::placeholder,.input-area::placeholder  {
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height */  
+    color: #C9CBCF;
+  }
+  .price-button  {
+    width: 40px;
+    height: 41px;
+    background-image: url('../images/button-price-image.svg'), linear-gradient(290.75deg, #F34B31 -11.35%, #FFA782 106.98%);
+    background-repeat: no-repeat;
+    background-position: center;
+    outline: none;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+
+  
+  .input-submit-head {
+    background-image: linear-gradient(315.87deg, #F34B31 -11.35%, #FFA782 106.98%);
+    padding: 14px 106px;
+    margin:12px 11px 12px 20px;
+    color:white;
+    border:none;
+    text-transform: uppercase;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 22px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin:8px auto;
+  }
+
+  .input-text-head {
+    border:none;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 19px;
+    /* identical to box height */
+    width:90%;
+    margin:0 auto;
+    display: block;
+    height:52px;
+    color: #2F3B43;
+    background: url('../images/ellipsis.png') no-repeat;
+    border-bottom: 1px solid #9EC1E1;
+    background-position: center right;
+    text-align: left;
+    cursor: pointer;
+  }
+}
 
