--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -16,9 +16,9 @@
             <h2>Нужна консультация?</h2>
             <div class="input-group-footer">
                 <label for="user-name"></label>
-                <input type="tel" placeholder="Ваше имя" name="name" id="user-name" required>
+                <input type="text" placeholder="Ваше имя" name="name" id="user-name" required>
                 <label for="user-mobile"></label>
-                <input type="text" name="mobile" placeholder="Номер телефона" id="user-mobile" required>
+                <input type="tel" name="mobile" placeholder="Номер телефона" id="user-mobile" required>
                 <input type="submit" value="Свяжитесь со мной" id="contact-us-submit">
                 
             </div>
