--- a/public/stylesheets/index-first-section.css
+++ b/public/stylesheets/index-first-section.css
@@ -1,28 +1,6 @@
 /* Start Copter Animation*/
 
-@keyframes example1 {
-  25%   { 
-    transform: rotate(9deg) translateY(-110%) translateX(270%); 		
-  }
-  40%   { 
-    transform: rotate(14deg) translateY(-40%) translateX(110%); 		
-  }
-  50% {
-    transform: rotate(-1deg) translateY(-80%) translateX(-20%) scale(1.05);  
-  }
-  65% {
-    transform: rotate(8deg) translateY(-40%) translateX(-50%) scale(1.18);   
-  }
-  75% {
-    transform: rotate(16deg) scale(0.55);   
-  }
-  80% {
-    transform: rotate(28deg)  scale(1);
-  }
-  100% { 
-    transform: translateX(0%) rotate(-6deg);
-  }
- }
+
 
 /* End Copter Animation*/
 
@@ -173,7 +151,7 @@
 }
 
 .location-dropdown {
-  width: 342px !important;
+  width: 320px !important;
   text-align: left;
   padding:0 !important;
   border-radius: 3px;
@@ -259,7 +237,7 @@ input[type="search"]::-webkit-search-cancel-button  {
 }
 
 .price-dropdown, .area-dropdown {
-  width: 325px !important;
+  width: 320px !important;
   padding:0 !important;
 }
 
@@ -320,14 +298,14 @@ input[type="search"]::-webkit-search-cancel-button  {
     }
     .copter {
       background-image: url('../images/copter.png');
-      max-width:250px;
+      max-width:230px;
       height:205px;
       margin: 0;
       background-repeat: no-repeat;
       background-position:25% 50%;
       margin-bottom:-110px;
       transform: rotate(-6deg);
-      animation: example1 10s linear infinite;
+     
   }
 
     .title-mobile {
@@ -377,6 +355,10 @@ input[type="search"]::-webkit-search-cancel-button  {
     }
     
     
+    .uk-dropdown {
+      left:57px !important;
+    }
+
   
     .input-submit-head {
       background-image: linear-gradient(315.87deg, #F34B31 -11.35%, #FFA782 106.98%);
@@ -625,14 +607,9 @@ input[type="search"]::-webkit-search-cancel-button  {
       background-image: url('../images/copter.png');
       max-width:150px;
       height:205px;
-      margin: 0;
-      background-repeat: no-repeat;
-      background-position:25% 50%;
-      margin-bottom:-110px;
-      margin-left:40%;
       margin-top:-30px;
-      transform: rotate(45deg);
-      animation: example1 10s linear infinite;
+      
+      
   }
   
 }
@@ -648,6 +625,10 @@ input[type="search"]::-webkit-search-cancel-button  {
 
   .input-submit-head {
     padding: 14px 104px;
+  }
+
+  .uk-dropdown {
+    left:0 !important;
   }
   
 }
