--- a/public/stylesheets/guide-index.css
+++ b/public/stylesheets/guide-index.css
@@ -66,6 +66,10 @@ figure {
     grid-area: 3 / 3 / 5 / 5; 
 }
 
+.card-wrapper {
+    margin:0 !important;
+}
+
 
 @media (max-width:1500px) {
     .wrapper-guides {
