--- a/views/guides/show.ejs
+++ b/views/guides/show.ejs
@@ -3,6 +3,10 @@
     <link rel='stylesheet' href='/stylesheets/article-show.css' />
     <link rel='stylesheet' href='/stylesheets/guide-show.css' />
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.css' type='text/css' />
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.min.js'></script>
 </head>
 
 <div class="article-wrapper">
@@ -33,7 +37,8 @@
     
     <p class="article-intro"><%= guide.introduction %></p>
    
-    <p class="article-text"><%= guide.body %></p>
+    <p class="article-text" id="root"></p>
+    
 
     <img class="article-image" src="<%= guide.images[1].url %>" alt="<%= guide.title %>">
 
@@ -61,6 +66,17 @@
 
 <script>
     var guide = <%- JSON.stringify(guide) %>;
+    var body = { features: <%- JSON.stringify(guide.body) %> };
+     
+    var stringHTML = body.features;
+    
+    //Create temp element holder
+    var tempElement = document.createElement("div");
+    //Add fetched HTML to tempElement
+    tempElement.innerHTML = body.features;
+    
+    //Now you can query it as it was a normal DOM element
+    document.getElementById('root').appendChild(tempElement);
 </script>
 <script src='/javascripts/guide-show.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
