--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,63 +5,110 @@
 </head>
 
 
-<img src="<%= currentUser.image.secure_url %>" alt="<%= currentUser.username %>'s profile image" class="profile-image">
-<div class="col-md-6">
-	<h5>Добро пожаловать, <strong><%= currentUser.username %> </strong> вы находитесь на странице своего профиля.</h5>
-	<h4>Список избранных объектов:</h4>
-	
-	<% currentUser.favoriteLinks.forEach(function(favoriteLink){ %>
-		<a href="/projects/<%= favoriteLink.id %>"><%= favoriteLink.url %> </a>
-	<% }); %>
-	
+
+
+<div class="uk-grid-collapse uk-grid-item-match" data-uk-grid>
+
+
+	<main class="uk-width-expand uk-position-relative">
+		<div class="uk-panel uk-section uk-section-small uk-section-muted uk-container uk-container-expand" data-uk-height-viewport="offset-top: true">
+			<h1 class="uk-heading-divider">Страница профиля</h1>
+			<div class="uk-child-width-1-1 uk-child-width-1-2@m uk-child-width-1-3@l" data-uk-grid>
+				<div class="uk-width-1-1">
+					<div class="uk-card uk-card-default uk-card-body">
+						<h4>Список избранных объектов:</h4>
+						<ul class="uk-list uk-list-divider">
+							<% currentUser.favoriteLinks.forEach(function(favoriteLink){ %>
+								<li><a href="/projects/<%= favoriteLink.id %>"><%= favoriteLink.url %> </a></li>
+							<% }); %>
+						</ul>
+						
+					</div>
+				</div>
+				<div class="uk-width-1-1">
+					<div class="uk-card uk-card-default uk-card-body">
+						
+						<form action="/profile?_method=PUT" method="POST" enctype="multipart/form-data" class="col-md-6"">
+							<h4>Изменить данные профиля:</h4>
+							<div class="uk-margin">
+								<label for="username" class="uk-form-label">Username:</label>
+								<input type="text" id="username" name="username" placeholder="username" class="uk-input uk-form-width-medium" value="<%= currentUser.username %>" autofocus required>
+							</div>
+							<div class="uk-margin">
+								<label for="current-password" class="uk-form-label">Текущий пароль: (обязателен для обновления профиля):</label>
+								<input type="password" id="current-password" name="currentPassword" placeholder="текущий пароль" class="uk-input uk-form-width-medium" required>
+							</div>
+							<div class="uk-margin">
+								<label for="new-password" class="uk-form-label">Новый пароль:</label>
+								<input type="password" id="new-password" name="newPassword" class="uk-input uk-form-width-medium" placeholder="новый пароль">
+							</div>
+							<div class="uk-margin">
+								<label for="password-confirmation" class="uk-form-label">Подтверждение пароля:</label>
+								<input type="password" id="password-confirmation" name="passwordConfirmation" class="uk-input uk-form-width-medium" placeholder="подтвердите пароль">
+							</div>
+							<div id="validation-message"></div>
+							<div class="uk-margin">
+								<label for="email" class="uk-form-label">Электронный адрес:</label>
+								<input type="text" id="email" name="email" placeholder="электронный адрес" class="uk-input uk-form-width-medium" value="<%= currentUser.email %>">
+							</div>
+							<div class="uk-margin" uk-margin>
+								<div uk-form-custom="target: true">
+									<input type="file"  name="image">
+									<input class="uk-input uk-form-width-medium" type="text" placeholder="Фото профиля" disabled>
+								</div>
+							</div>
+							
+						
+							<input type="submit" id="update-profile" class="uk-button uk-button-secondary"> 
+						</form>
+					</div>
+				</div>
+				<div class="uk-width-1-1">
+					<div class="uk-card uk-card-default uk-card-body">
+						<% if (currentUser && currentUser.username === 'admin') { %>
+							
+								
+								<div class="uk-inline">
+									<h4>Elapcometer:</h4>
+									<div uk-drop>
+										<div class="uk-card uk-card-body uk-card-default">рейтинг проверенных нами объектов невдижимости</div>
+									</div>
+								</div>
+						<% } %>
+					</div>
+				</div>
+				<div class="uk-width-1-1">
+					<div class="uk-card uk-card-default uk-card-body">
+						<% if (currentUser && currentUser.username === 'admin') { %>
+							
+								
+								<div class="uk-inline">
+									<h4>Инвестиции с Elapce:</h4>
+									<div uk-drop>
+										<div class="uk-card uk-card-body uk-card-default">наши список предложений кейсов с высоким уровнем доходности</div>
+									</div>
+								</div>
+						<% } %>
+					</div>
+				</div>
+				<div class="uk-width-1-1">
+					<div class="uk-card uk-card-default uk-card-body">
+						<% if (currentUser && currentUser.username === 'admin') { %>
+							
+								<h4>Добавить контент:</h4>
+								<ul class="uk-nav-sub">
+									<li><a href="/projects/new">Добавить объект</a></li>
+									<li><a href="/articles/new">Добавить новость</a></li>
+									<li><a href="/guides/new">Добавить гид по городам</a></li>
+								</ul>
+							
+							<% } %>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
 </div>
-
-<div class="col-md-6"">
-	
-
-
-	<% if (currentUser && currentUser.username === 'admin') { %>
-				<a href="/projects/new" class="addNew">Добавить объект</a>
-				<a href="/articles/new" class="addNew">Добавить новость</a>
-				<a href="/guides/new" class="addNew">Добавить гид по городам</a>
-	<% } %>
-</div>
-
-
-
-
-
-<form action="/profile?_method=PUT" method="POST" enctype="multipart/form-data" class="col-md-6"">
-	<p>Изменить данные профиля:</p>
-	<div>
-		<label for="username">Username:</label>
-		<input type="text" id="username" name="username" placeholder="username" value="<%= currentUser.username %>" autofocus required>
-	</div>
-	<div>
-		<label for="current-password">Текущий пароль: (обязателен для обновления профиля):</label>
-		<input type="password" id="current-password" name="currentPassword" placeholder="current password" required>
-	</div>
-	<div>
-		<label for="new-password">Новый пароль:</label>
-		<input type="password" id="new-password" name="newPassword" placeholder="new password">
-	</div>
-	<div>
-		<label for="password-confirmation">Подтверждение пароля:</label>
-		<input type="password" id="password-confirmation" name="passwordConfirmation" placeholder="password confirmation">
-	</div>
-	<div id="validation-message"></div>
-	<div>
-		<label for="email">Электронный адрес:</label>
-		<input type="text" id="email" name="email" placeholder="email" value="<%= currentUser.email %>">
-	</div>
-	<div>
-		<label for="image">Фото профиля:</label>
-		<small>(this deletes existing)</small>
-		<input type="file" id="image" name="image">
-	</div>
-
-	<input type="submit" id="update-profile"> 
-</form>
 
 
 
