--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,12 @@
 <% layout('layouts/boilerplate') -%>
 
 <head>
+	 <!-- UIkit CSS -->
+	 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" />
+
+	 <!-- UIkit JS -->
+	 <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
+	 <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
 	<link rel='stylesheet' href='/stylesheets/profile.css' />	
 </head>
 
