--- a/views/guides/edit.ejs
+++ b/views/guides/edit.ejs
@@ -1,92 +1,97 @@
 <% layout('layouts/boilerplate') -%>
 
+<head>
+	<!-- UIkit CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" />
 
-
-<form action="/guides/<%= guide.id %>?_method=PUT" method="POST" enctype="multipart/form-data" class="ml-3">
-	<h1>Обновить гид</h1>
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Название района или города:</p>
-			<input type="text" name="title" placeholder="Название" class="form-control" value="<%= guide.title %>">
-		</div>	
-	</div>
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Название района или города:</p>
-			<input type="text" name="location" placeholder="Местоположение" class="form-control" value="<%= guide.location %>">
-		</div>	
-	</div>
-	
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Текст гида:</p>
-			<textarea name="body" placeholder="Текст гида"  class="form-control col-md-12" rows="20"><%= guide.body %></textarea>
-		</div>
-		
-	</div>
-	<div class="form-row "></div>
-		<div class="custom-file col-md-6 mb-3">
-			
-			<label class="custom-file-label" for="inputGroupFile01">Фотографии к гиду:</label>
-			<input type="file" accept="images/*" name="images" id="inputGroupFile01" class="custom-file-input" multiple  />	
-		</div>	
-		<!-- <input name="file1" type="file" accept="application/pdf"> */ -->
-		
-    </div>
-
-    <div class="d-flex flex-row flex-wrap mb-3 justify-content-center">
-		
-		<% guide.images.forEach(function(image, i) { %>
-			<div class="card m-1" style="width: 18rem;">
-				<img class="card-img-top" src="<%= image.url %>"/>
-				<div class="card-body">
-					<label for="image<%= i %>">Delete?</label>
-					<input type="checkbox" class="imageDeleteCheckbox" name="deleteImages[]" id="image<%= i %>" value="<%= image.public_id %>">
-				</div>
+	<!-- UIkit JS -->
+	<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
+   	
+</head>
+<div class="uk-container uk-container-expand">
+	<form action="/guides/<%= guide.id %>?_method=PUT" method="POST" enctype="multipart/form-data" class="ml-3">
+		<h1>Обновить гид</h1>
+		<div>
+			<div>
+				<p class="uk-text-bolder uk-margin-top">Название района или города:</p>
+				<input type="text" name="title" placeholder="Название" class="uk-input uk-width-1-3"  value="<%= guide.title %>">
 			</div>	
-		<% }) %>
-
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-3">
-            <p>Данные для диаграмы:</p>
-        
-            <% guide.data.forEach(function(data, i) { %>
-                <input type="text" name="data" placeholder="Данные" class="form-control" id="<%= i %>" value="<%= data %> ">
-            <% }) %>
-        </div>
-        <div class="form-group col-md-3">   
-            <p>Подпись для диаграмы:</p>
-            <% guide.labels.forEach(function(label, i) { %>
-                <input type="text" name="labels" placeholder="Данные" class="form-control" id="<%= i %>" value="<%= label %> ">
-            <% }) %>
-        </div>   
-    </div>
-    
-    
-    
-  
-    
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Вступление - первые две строки:</p>
-			<input type="text" name="introduction" class="form-control" value="<%= guide.introduction %>">
-		</div>	
-	</div>
-
-
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Заключение, после второго фото:</p>
-			<input type="text" name="conclusions" class="form-control" value="<%= guide.conclusions %>">
-		</div>	
-	</div>
-
-	
-	
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<input type="submit" class="btn btn-light mt-2">
 		</div>
-	</div>
-</form>
+		<div>
+			<div>
+				<p class="uk-text-bolder uk-margin-top">Название района или города:</p>
+				<input type="text" name="location" placeholder="Местоположение" class="uk-input uk-width-1-3"  value="<%= guide.location %>">
+			</div>	
+		</div>
+		
+		<div>
+			<div>
+				<p class="uk-text-bolder uk-margin-top">Текст гида:</p>
+				<textarea name="body" placeholder="Текст гида" class="uk-textarea uk-width-1-3" rows="20"><%= guide.body %></textarea>
+			</div>
+			
+		</div>
+		<div>
+			<p class="uk-text-bolder uk-margin-top" for="inputGroupFile01">Фотографии к гиду:</p>
+				<div class="uk-margin">
+					<div uk-form-custom>
+						<input type="file" accept="images/*" name="images" id="inputGroupFile01" multiple>
+						<button class="uk-button uk-button-default" type="button" tabindex="-1">Загрузить</button>
+					</div>
+			</div>
+			<!-- <input name="file1" type="file" accept="application/pdf"> */ -->
+			
+		</div>
+	
+		<div class="d-flex flex-row flex-wrap mb-3 justify-content-center">
+			
+			<% guide.images.forEach(function(image, i) { %>
+				<div class="card m-1" style="width: 18rem;">
+					<img class="card-img-top" src="<%= image.url %>"/>
+					<div class="card-body">
+						<label for="image<%= i %>">Delete?</label>
+						<input type="checkbox" class="imageDeleteCheckbox" name="deleteImages[]" id="image<%= i %>" value="<%= image.public_id %>">
+					</div>
+				</div>	
+			<% }) %>
+	
+		</div>
+		<div>
+			<div class="form-group col-md-3">
+				<p class="uk-text-bolder uk-margin-top">Данные для диаграмы:</p>
+			
+				<% guide.data.forEach(function(data, i) { %>
+					<input type="text" name="data" placeholder="Данные" class="uk-input uk-width-1-3"  id="<%= i %>" value="<%= data %> ">
+				<% }) %>
+			</div>
+			<div class="form-group col-md-3">   
+				<p class="uk-text-bolder uk-margin-top">Подпись для диаграмы:</p>
+				<% guide.labels.forEach(function(label, i) { %>
+					<input type="text" name="labels" placeholder="Данные" class="uk-input uk-width-1-3"  id="<%= i %>" value="<%= label %> ">
+				<% }) %>
+			</div>   
+		</div>
+		
+		
+		
+	  
+		
+		<div>
+			<div>
+				<p class="uk-text-bolder uk-margin-top">Вступление - первые две строки:</p>
+				<input type="text" name="introduction" class="uk-input uk-width-1-3"  value="<%= guide.introduction %>">
+			</div>	
+		</div>
+	
+	
+		<div>
+			<div>
+				<p class="uk-text-bolder uk-margin-top">Заключение, после второго фото:</p>
+				<input type="text" class="uk-input uk-width-1-3" name="conclusions" value="<%= guide.conclusions %>">
+			</div>
+			<input type="submit" class="uk-button uk-button-secondary uk-margin">	
+		</div>
+	
+	</form>
+</div>
