--- a/views/guides/new.ejs
+++ b/views/guides/new.ejs
@@ -1,81 +1,89 @@
 <% layout('layouts/boilerplate') -%>
 
+<head>
+	<!-- UIkit CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" />
 
+	<!-- UIkit JS -->
+	<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
+   	
+</head>
 
-
-<form action="/guides" method="POST" enctype="multipart/form-data" class="ml-3">
-	<h1>Добавить новый гид</h1>
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Название района или города:</p>
-			<input type="text" name="title" placeholder="Название" class="form-control">
-		</div>	
-	</div>
-	
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Название района или города:</p>
-			<input type="text" name="location" placeholder="Местоположение" class="form-control">
-		</div>	
-	</div>
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Текст гида:</p>
-			<textarea name="body" placeholder="Текст гида"  class="form-control col-md-12" rows="20"></textarea>
+<div class="uk-container uk-container-expand">
+	<form action="/guides" method="POST" enctype="multipart/form-data" >
+		<h1>Добавить новый гид</h1>
+		<div >
+			<div >
+				<p class="uk-text-bolder uk-margin-top">Название района или города:</p>
+				<input type="text" class="uk-input uk-width-1-3" name="title" placeholder="Название" >
+			</div>	
 		</div>
 		
-	</div>
-	<div class="form-row "></div>
-		<div class="custom-file col-md-6 mb-3">
+		<div >
+			<div >
+				<p class="uk-text-bolder uk-margin-top">Название района или города:</p>
+				<input type="text" class="uk-input uk-width-1-3" name="location" placeholder="Местоположение" >
+			</div>	
+		</div>
+		<div >
+			<div >
+				<p class="uk-text-bolder uk-margin-top">Текст гида:</p>
+				<textarea name="body" placeholder="Текст гида"  class="uk-textarea uk-width-1-3" rows="20"></textarea>
+			</div>
 			
-			<label class="custom-file-label" for="inputGroupFile01">Фотографии к гиду:</label>
-			<input type="file" accept="images/*" name="images" id="inputGroupFile01" class="custom-file-input" multiple  />	
-		</div>	
-		<!-- <input name="file1" type="file" accept="application/pdf"> */ -->
+		</div>
+		<div>
+			<p class="uk-text-bolder uk-margin-top" for="inputGroupFile01">Фотографии к гиду:</p>
+				<div class="uk-margin">
+					<div uk-form-custom>
+						<input type="file" accept="images/*" name="images" id="inputGroupFile01" multiple>
+						<button class="uk-button uk-button-default" type="button" tabindex="-1">Загрузить</button>
+					</div>
+			</div>
+			<!-- <input name="file1" type="file" accept="application/pdf"> */ -->
+			
+		</div>
 		
-    </div>
-    
-    <div class="form-row">
-		<div class="form-group col-md-3">
-			<p>Данные для диаграмы:</p>
-			<input type="text" name="data" placeholder="Данные" class="form-control">
-			<input type="text" name="data" placeholder="Данные" class="form-control">
-			<input type="text" name="data" placeholder="Данные" class="form-control">
-			<input type="text" name="data" placeholder="Данные" class="form-control">
-			<input type="text" name="data" placeholder="Данные" class="form-control">
-			<input type="text" name="data" placeholder="Данные" class="form-control">
+		<div >
+			<div >
+				<p class="uk-text-bolder uk-margin-top">Данные для диаграмы:</p>
+				<input type="text" class="uk-input uk-width-1-3" name="data" placeholder="Данные" >
+				<input type="text" class="uk-input uk-width-1-3" name="data" placeholder="Данные" >
+				<input type="text" class="uk-input uk-width-1-3" name="data" placeholder="Данные" >
+				<input type="text" class="uk-input uk-width-1-3" name="data" placeholder="Данные" >
+				<input type="text" class="uk-input uk-width-1-3" name="data" placeholder="Данные" >
+				<input type="text" class="uk-input uk-width-1-3" name="data" placeholder="Данные" >
+			</div>
+			<div >
+				<p class="uk-text-bolder uk-margin-top">Подпись для диаграмы:</p>
+				<input type="text" class="uk-input uk-width-1-3" name="labels" placeholder="Подпись к данным" >
+				<input type="text" class="uk-input uk-width-1-3" name="labels" placeholder="Подпись к данным" >
+				<input type="text" class="uk-input uk-width-1-3" name="labels" placeholder="Подпись к данным" >
+				<input type="text" class="uk-input uk-width-1-3" name="labels" placeholder="Подпись к данным" >
+				<input type="text" class="uk-input uk-width-1-3" name="labels" placeholder="Подпись к данным" >
+				<input type="text" class="uk-input uk-width-1-3" name="labels" placeholder="Подпись к данным" >
+			</div>		
 		</div>
-		<div class="form-group col-md-3">
-			<p>Подпись для диаграмы:</p>
-			<input type="text" name="labels" placeholder="Подпись к данным" class="form-control">
-			<input type="text" name="labels" placeholder="Подпись к данным" class="form-control">
-			<input type="text" name="labels" placeholder="Подпись к данным" class="form-control">
-			<input type="text" name="labels" placeholder="Подпись к данным" class="form-control">
-			<input type="text" name="labels" placeholder="Подпись к данным" class="form-control">
-			<input type="text" name="labels" placeholder="Подпись к данным" class="form-control">
-		</div>		
-    </div>
-    
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Вступление - первые две строки:</p>
-			<input type="text" name="introduction" class="form-control">
-		</div>	
-	</div>
-
-
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Заключение, после второго фото:</p>
-			<input type="text" name="conclusions" class="form-control" >
-		</div>	
-	</div>
-
+		
+		<div >
+			<div >
+				<p class="uk-text-bolder uk-margin-top">Вступление - первые две строки:</p>
+				<input type="text" class="uk-input uk-width-1-3" name="introduction" >
+			</div>	
+		</div>
 	
 	
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<input type="submit">
+		<div >
+			<div >
+				<p class="uk-text-bolder uk-margin-top">Заключение, после второго фото:</p>
+				<input type="text" class="uk-input uk-width-1-3" name="conclusions"  >
+			</div>
+			<input type="submit" class="uk-button uk-button-secondary uk-margin">	
 		</div>
-	</div>
-</form>
+	
+		
+	</form>
+</div>
+
+
