--- a/views/projects/new.ejs
+++ b/views/projects/new.ejs
@@ -1,100 +1,116 @@
 <% layout('layouts/boilerplate') -%>
 
+<head>
+	<!-- UIkit CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" />
 
+	<!-- UIkit JS -->
+	<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
+   	
+</head>
 
-
-<form action="/projects" method="POST" enctype="multipart/form-data" class="ml-3">
-	<h1>Добавить новый обьект</h1>
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Название объекта:</p>
-			<div><input type="text" name="project[title]" placeholder="Название" class="form-control"></div>
-		</div>	
-	</div>
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Цена:</p>
-			<div><input type="number" name="project[price]" step="100" placeholder="Цена" class="form-control"></div>
+<div class="uk-container uk-container-expand">
+	<form action="/projects" method="POST" enctype="multipart/form-data" >
+		<h1>Добавить новый обьект</h1>
+		<div>
+			<div>
+				<p class="uk-text-bolder uk-margin-top">Название объекта:</p>
+				<div><input class="uk-input uk-width-1-3" type="text" name="project[title]" placeholder="Название"></div>
+			</div>	
 		</div>
-	</div>
-	
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Детальное описание объекта:</p>
-			<textarea name="project[description]" placeholder="Описание"  class="form-control col-md-6" rows="3"></textarea>
+		<div>
+			<div>
+				<p class="uk-text-bolder uk-margin-top">Цена:</p>
+				<div><input class="uk-input uk-width-1-3" type="number" name="project[price]" step="100" placeholder="Цена"></div>
+			</div>
 		</div>
 		
-	</div>
-	<div class="form-row "></div>
-		<div class="custom-file col-md-6 mb-3">
+		<div>
+			<div>
+				<p class="uk-text-bolder uk-margin-top">Детальное описание объекта:</p>
+				<textarea name="project[description]" placeholder="Описание" class="uk-textarea uk-width-1-3"  rows="5"></textarea>
+			</div>
 			
-			<label class="custom-file-label" for="inputGroupFile01">Фотографии:</label>
-			<input type="file" accept="images/*" name="images" id="inputGroupFile01" class="custom-file-input" multiple  />	
-		</div>	
-		<!-- <input name="file1" type="file" accept="application/pdf"> */ -->
-		
-	</div>
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<label>Местоположение(координаты либо город, улица если координаты не предусмотрены)</label>
-			<div><input type="text" name="project[location]" placeholder="Местоположение" class="form-control col-md-4"></div>	
+		</div>
+		<div>
+			
+				
+				<label  for="inputGroupFile01" class="uk-text-bolder uk-margin-top">Фотографии:</label>
+				
+				<div class="uk-margin">
+					<div uk-form-custom>
+						<input type="file" accept="images/*" name="images" id="inputGroupFile01" multiple>
+						<button class="uk-button uk-button-default" type="button" tabindex="-1">Загрузить</button>
+					</div>
+				</div>	
+			
+			<!-- <input name="file1" type="file" accept="application/pdf"> */ -->
+			
+		</div>
+		<div>
+			<div>
+				<p class="uk-text-bolder uk-margin-top">Местоположение(координаты либо город, улица если координаты не предусмотрены)</p>
+				<div><input class="uk-input uk-width-1-3 " type="text" name="project[location]" placeholder="Местоположение" ></div>	
+			</div>
+					
 		</div>
 		
-	</div>
-	
-	
-	<div class="form-group col-md-6 border border-dark">
-		<p>Назначение объекта - опционально:</p>
-		<input type="radio" id="invest" name="project[appointment]" value="Инвестиции" >
-		<label for="invest">Инвестиции</label>
-		<input type="radio" id="rent" name="project[appointment]" value="Аренда">
-		<label for="rent">Аренда</label>
-		<input type="radio" id="personal" name="project[appointment]" value="Личное использование">
-		<label for="personal">Личное использование</label>
-	</div>
-	
-	<div class="form-group col-md-6 border border-dark">
-		<p>Тип обьекта - обязательно:</p>
-		<input type="radio" id="apartement" name="project[type]" value="Апартаменты" >
-		<label for="apartement">Апартаменты</label>
-		<input type="radio" id="villa" name="project[type]" value="Вилла">
-		<label for="villa">Вилла</label>
-		<input type="radio" id="plot" name="project[type]" value="Участок земли">
-		<label for="plot">Участок земли</label>
-		<input type="radio" id="commercial" name="project[type]" value="Коммерческая недвижимость">
-		<label for="commercial">Коммерческая недвижимость</label>
-		<input type="radio" id="renovation" name="project[type]" value="Объект под реконструкцию">
-  		<label for="renovation">Объект под реконструкцию</label>
-	</div>
-	<div class="form-group col-md-6 border border-dark">
-		<p>Расстояние до моря - опционально(для курортной недвижимости):</p>
-		<input type="radio" id="100" name="project[seaDistance]" value="100" >
-		<label for="100">До 100 метров</label>
-		<input type="radio" id="1000" name="project[seaDistance]" value="1000">
-		<label for="1000">До 1000 метров</label>
-		<input type="radio" id="2000" name="project[seaDistance]" value="2000">
-		<label for="2000">До 2000 метров</label>
-	</div>
-	<div class="form-group col-md-6 border border-dark">
-		<p>Количество спален:</p>
-		<input type="checkbox" id="1" name="project[bedrooms]" value="1" >
-		<label for="1bedrooms">1 спальня</label>
-		<input type="checkbox" id="2" name="project[bedrooms]" value="2">
-		<label for="2bedrooms">2 спальни</label>
-		<input type="checkbox" id="3" name="project[bedrooms]" value="3">
-		<label for="3bedrooms">3 спальни</label>
-		<input type="checkbox" id="4" name="project[bedrooms]" value="4">
-		<label for="4bedrooms">4 спальни</label>
-		<input type="checkbox" id="5" name="project[bedrooms]" value="5">
-		<label for="5bedrooms">5 спален</label>
-		<input type="checkbox" id="5+" name="project[bedrooms]" value="6">
-		<label for="5+">Более 5</label>
-	</div>
-	<div class="form-row">
-		<div class="form-group col-md-6">
-			<p>Площадь объекта:</p>
-			<div><input type="number" name="project[area]" step="1" placeholder="Площадь" class="form-control col-md-4 mb-3"></div>	
-			<input type="submit">
+		
+		<div >
+			<p class="uk-text-bolder uk-margin-top">Назначение объекта - опционально:</p>
+			<input type="radio" class="uk-radio" id="invest" name="project[appointment]" value="Инвестиции" >
+			<label for="invest">Инвестиции</label>
+			<input type="radio" class="uk-radio" id="rent" name="project[appointment]" value="Аренда">
+			<label for="rent">Аренда</label>
+			<input type="radio" class="uk-radio" id="personal" name="project[appointment]" value="Личное использование">
+			<label for="personal">Личное использование</label>
 		</div>
-	</div>
-</form>
+		
+		<div>
+			<p class="uk-text-bolder uk-margin-top">Тип обьекта - обязательно:</p>
+			<input type="radio" class="uk-radio" id="apartement" name="project[type]" value="Апартаменты" >
+			<label for="apartement">Апартаменты</label>
+			<input type="radio" class="uk-radio" id="villa" name="project[type]" value="Вилла">
+			<label for="villa">Вилла</label>
+			<input type="radio" class="uk-radio" id="plot" name="project[type]" value="Участок земли">
+			<label for="plot">Участок земли</label>
+			<input type="radio" class="uk-radio" id="commercial" name="project[type]" value="Коммерческая недвижимость">
+			<label for="commercial">Коммерческая недвижимость</label>
+			<input type="radio" class="uk-radio" id="renovation" name="project[type]" value="Объект под реконструкцию">
+			  <label for="renovation">Объект под реконструкцию</label>
+		</div>
+		<div >
+			<p class="uk-text-bolder uk-margin-top">Расстояние до моря - опционально(для курортной недвижимости):</p>
+			<input type="radio" class="uk-radio" id="100" name="project[seaDistance]" value="100" >
+			<label for="100">До 100 метров</label>
+			<input type="radio" class="uk-radio" id="1000" name="project[seaDistance]" value="1000">
+			<label for="1000">До 1000 метров</label>
+			<input type="radio" class="uk-radio" id="2000" name="project[seaDistance]" value="2000">
+			<label for="2000">До 2000 метров</label>
+		</div>
+		<div >
+			<p class="uk-text-bolder uk-margin-top">Количество спален:</p>
+			<input type="checkbox" class="uk-checkbox" id="1" name="project[bedrooms]" value="1" >
+			<label for="1">1 спальня</label>
+			<input type="checkbox" class="uk-checkbox" id="2" name="project[bedrooms]" value="2">
+			<label for="2">2 спальни</label>
+			<input type="checkbox" class="uk-checkbox" id="3" name="project[bedrooms]" value="3">
+			<label for="3">3 спальни</label>
+			<input type="checkbox" class="uk-checkbox" id="4" name="project[bedrooms]" value="4">
+			<label for="4">4 спальни</label>
+			<input type="checkbox" class="uk-checkbox" id="5" name="project[bedrooms]" value="5">
+			<label for="5">5 спален</label>
+			<input type="checkbox" class="uk-checkbox" id="5+" name="project[bedrooms]" value="6">
+			<label for="5+">Более 5</label>
+		</div>
+		<div>
+			<div>
+				<p class="uk-text-bolder uk-margin-top">Площадь объекта:</p>
+				<div class="uk-margin-buttom"><input class="uk-input uk-width-1-3" type="number" name="project[area]" step="1" placeholder="Площадь" ></div>	
+				<input type="submit" class="uk-button uk-button-secondary uk-margin">
+			</div>
+		</div>
+	</form>
+</div>
+
