--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -280,6 +280,10 @@ a:hover {
   padding:0 16px;
 }
 
+.about-guides {
+  margin-bottom:160px;
+}
+
 .about-title {  
   
   height: 52px;
@@ -291,7 +295,15 @@ a:hover {
   margin-bottom:20px;
 }
 
-
+.guide-title {
+  height: 52px;
+  font-family: 'GothamPro', sans-serif;
+  font-size: 24px;
+  line-height: 27px;
+  font-weight: bold;
+  color: #4B535F;
+  margin-bottom:20px;
+}
 
 
 .about-blocks {
@@ -571,6 +583,99 @@ a:hover {
   margin:0 auto;
 }
 
+.wrapper-guides {
+  max-width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(4, 354px);
+  grid-template-rows: repeat(2, 354px);
+  grid-column-gap: 40px;
+  grid-row-gap: 40px;
+  
+}
+
+
+.guide-text {
+  position: absolute;
+  bottom: 11%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border:none;
+  font-family: "Lato-Regular",sans-serif;
+
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 34px;
+  /* or 50px */
+
+  border-bottom: 2px solid white;
+  text-transform: uppercase;
+
+  color: #FFFFFF;
+}
+
+
+.guide-text:hover {
+  color: #FFFFFF;
+}
+
+
+
+.card-wrapper {
+  position: relative; 
+}
+
+figure {
+  margin:0;
+}
+
+.card-image-guide {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+
+.card-wrapper:nth-of-type(5) {
+  grid-area: 1 / 3 / 3 / 5;
+}
+
+
+
+.card-wrapper {
+  margin:16px;
+}
+
+.button-guides-wrapper {
+  margin: 40px 0  0;
+  width: 100%;
+}
+
+@media (max-width:1500px) {
+  .wrapper-guides {
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      margin-bottom:10px;
+      padding:0 16px;
+      grid-row-gap: 20px;
+      grid-column-gap: 20px;
+  }
+  .guide-text {
+      font-size: 28px;
+  }
+}
+
+@media (max-width:900px) {
+  .wrapper-guides {
+      display: flex;
+      flex-direction: column;
+  }
+  .card-wrapper {
+      margin:16px;
+  }
+}
+
 @media all and (min-width: 900px) { 
     
   .nav-gallery-wrapper {
@@ -764,6 +869,16 @@ a:hover {
   margin-bottom:95px;
 }
 
+.guide-title {
+  height: 52px;
+  font-family: 'GothamPro', sans-serif;
+  font-size: 54px;
+  line-height: 52px;
+  font-weight: bold;
+  color: #4B535F;
+  margin-bottom:95px;
+}
+
   .about-item-block:before{
   position:absolute;
   z-index:-1;
@@ -913,7 +1028,14 @@ a:hover {
     
   }
   
+  .card-wrapper {
+    margin:0 !important;
+  }
 
+  .button-guides-wrapper {
+    margin: 80px auto 0;
+    max-width: 427px;
+  }
   
 
 }
@@ -949,6 +1071,9 @@ a:hover {
   }
   .about-section {
     margin-bottom:220px;
+  }
+  .about-guides {
+    margin-bottom:20px;
   }
   .keys-about {
     max-width: 121px;
@@ -990,7 +1115,7 @@ a:hover {
     
     width: 400px;
   }
-  h3.title-second-mobile, h3.news-title, h3.about-title, .title-proposition {
+  h3.title-second-mobile, h3.news-title, h3.about-title, h3.guide-title, .title-proposition {
     margin:48px 0;
     text-align: center;
     font-size:32px !important;
